--- a/sound_waves.tex
+++ b/sound_waves.tex
@@ -198,7 +198,7 @@ c$. The relationship between the length of a wave and its frequency is
 of course very relevant for musical instrument makers and architecture
 of buildings with musical interest (concert halls, recording studios.)
 
-The amplitude of the density modulation is $\rho_A$, and $\rho_A \ltt
+The amplitude of the density modulation is $\rho_A$, and $\rho_A \ll
 \rho_0$ since modulations are small.
 
 The corresponding pressure modulation is
