--- a/sound_waves_att.tex
+++ b/sound_waves_att.tex
@@ -118,7 +118,7 @@ This is an interesting wave, since the attenuation coefficient is
 equal to the wave number. It looks like a simple function: $
 e^{-x}\sin(x)$, which would be called simplistic by a physicist. If
 you plot it you'll see it decays very fast, with just one maximum of
-minimum of importance. (You can just type "e^-x*cos(x) from 0 to 10"
+minimum of importance. (You can just type ``e\^-x*cos(x) from 0 to 10''
 in google, it will plot it!). So, yes, sound waves are basically
 longitudinal, since their transverse components get attenuated very
 fast. How fast? As we said before, the attenuation length is the
@@ -130,14 +130,14 @@ hearing range), and will decrease as the inverse of the square root of
 the frequency.
 
 \begin{table}
-\begin{tabular}{c|c|c|c|c|}
-
+\begin{tabular}{|c|c|c|c|c|}
+  \hline
     & $ c$ (m/s) &  $ \nu$ (m$^2$/s) & $\zeta/\rho_0$ (m$^2$/s) & $ f_c$ (GHz)\\
   \hline
   \hline
   water & $1480$& $ 1.0 \times 10^{-6}$ & $ 3.1 \times 10^{-6}$ & $79$ \\
   \hline
-  air & $340$   & $ 1.48\times 10^{-5}$ & $ 5 \times 10^{-6}$ ? & $0.7$
+  air & $340$   & $ 1.48\times 10^{-5}$ & $ 5 \times 10^{-6}$ ? & $0.7$ \\
   \hline
 \end{tabular}
 \caption{Numerical values for two important substances. Question marks
