--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{book}
+\documentclass[a4paper,10pt,draft]{book}
 \usepackage{graphicx} %\usepackage[utf8]{inputenc}
 % center all figures:
 \makeatletter
@@ -21,6 +21,10 @@
 
 \usepackage{siunitx}
 
+\usepackage{showlabels}
+
+%% defs.-
+
 %\newcommand{\eye}{\mathbf{1}}
 \newcommand{\eye}{\mathbb{1}}
 \newcommand{\bfu}{\mathbf{u}}
@@ -30,6 +34,7 @@
 \newcommand{\bfF}{\mathbf{F}}
 \newcommand{\bfg}{\mathbf{g}}
 \newcommand{\bfe}{\mathbf{e}}
+\newcommand{\bhe}{\hat{\mathbf{e}}}
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfr}{\mathbf{r}}
 
