--- a/sound_waves.tex
+++ b/sound_waves.tex
@@ -1,3 +1,4 @@
+\label{sec:sound_waves}
 
 The existence of pressure and density waves, as solution of the Euler
 equations, is established in this section.
@@ -12,8 +13,7 @@ Continuity is also important: since we are expecting density waves,
 this quantity should not be considered to be constant. The full
 equation is therefore:
 \[
-\nabla \cdot \mathbf{\rho u} + \frac{\partial
-\rho}{\partial t} =0
+\nabla \cdot \rho \bfu + \frac{\partial \rho}{\partial t} =0
 \]
 
 Finally, in order to close the equations, we need some relationship
