More on sound waves with attenuation

--- a/sound_waves_att.tex
+++ b/sound_waves_att.tex
@@ -43,11 +43,12 @@ us with eliminating the density as the only viable scheme.
 If we apply the gradient operator to continuity, and differentiate
 with respect to space in momentum, we arrive to this equation for
 the velocity only:
-\[
+\begin{equation}
+  \label{eq:sound_att_Fourier}
   \frac{\partial^2 }{\partial t^2 } \mathbf{u} =
   c^2\nabla^2 \bfu + \nu \nabla^2\frac{\partial\bfu}{\partial t} +
   \zeta \nabla (\nabla\cdot \frac{\partial\bfu}{\partial t} ) ,
-\]
+\end{equation}
 where $\nu=\mu/\rho_0$, the usual kinematic viscosity, and we define
 an additional kinematic bulk viscosity $\zeta=(\mu+\lambda)/\rho_0$.
 
@@ -55,9 +56,14 @@ Clearly, this reduces to our previous sound wave equation if there was
 no viscosity.
 
 Let us try a harmonic wave solution of the form
-\[
-  \bfu = \bfu_0 e^{i(\omega t - \beta x)} .
-\]
+\begin{equation}
+  \label{eq:wave_form_visc}
+  \bfu = \Re\left[ \bfu_0 e^{i( \beta x - \omega t)} \right].
+\end{equation}
+Now $\bfu_0$ is a fixed amplitude vector, which may be parallel to
+$\bhe$ in a longitudinal sound wave, but may also be perpendicular to
+it, for a traverse wave. In general, of course, a wave may be a
+combination of both.
 
 Notice the usage of complex exponentials, which is common in wave
 physics. Of course, the actual solution is real, so usually the real
@@ -68,77 +74,86 @@ In our case, this is not important, but rather the possibility that
 $\beta$ may be complex. In this case, its values encapsulates both a
 real wave number and an spatial decay. Indeed, if
 \[
-  \beta = k - \alpha i ,
+  \beta = k + \alpha i ,
 \]
 then
 \[
-  \bfu = \bfu_0e^{- \alpha x} e^{i(\omega t - k x)} ,
+  \bfu = \bfu_0e^{- \alpha x} e^{i(k x - \omega t )} ,
 \]
 which clearly identifies $ \omega=2\pi /\lambda$ as the (real)
-wave-number for a wave-lenght $ \lambda$, and $ \alpha=1 /L $, as a
-sound attenuation coefficient, with $ L $ the penetration length.
+wave-number for a wave-lenght $ \lambda$, and $ \alpha=1 /\ell $, as a
+sound attenuation coefficient, with $ \ell $ the attenuation length.
+\index{sound attenuation coefficient}
+\index{attenuation length}
 
-Now, second time derivatives just yield
+Now, the time derivative is
 \[
-  \frac{\partial^2  }{\partial t^2 } \mathbf{u} = -\alpha^2 \mathbf{u}
+  \frac{\partial \bfu  }{\partial t }  = -i \omega \bfu ,
+\]
+and the second derivative,
+\[
+  \frac{\partial^2 \bfu   }{\partial t^2 }  = -\omega^2 \bfu.
 \]
 
-But, it is quite interesting that these two second space derivatives
-are not quite the same:
+But, it is quite interesting that the two second space derivatives are
+not the same. The Laplacian is
+\[
+\nabla^2 \bfu = -\beta^2 \bfu,
+\]
+while the gradient of the divergence is
+\[
+\nabla (\nabla\cdot \bfu ) = -\beta^2 u_{0x} \bhe_x.
+\]
+%
+The latter then acts only on longitudinal waves: tranverse wave are
+inherently divergence-free, since depend on one coordinate but point
+toward a perpendicular direction (as in Couette and Poiseuille flows).
+Let us consider them separately.
 
-\[ \nabla^2 \mathbf{u} = -k^2 \mathbf{u}\]
+\subsection{Longitudinal waves}
 
-\[ \nabla (\nabla\cdot \mathbf{u} ) = -k^2
-(\mathbf{u}\cdot\mathbf{i})\mathbf{i} ,\]
+In this case, insertion of the wave form \ref{eq:wave_form_visc} into
+Eq. \ref{eq:NS_Newtonian_const_visc} yields
 
-where $ \mathbf{i} $ is the unit vector in the $x$ direction. Clearly,
-the second version of the derivative produces a longitudinal wave,
-with a vector component just along the direction of propagation!
+\begin{equation}
+  -\omega^2 = - c^2\beta^2 + i (\nu+\zeta)  \omega \beta^2 .
+\end{equation}
+The expression includes both the shear and the volume bulk viscosity,
+as seems fitting for a longitudinal disturbance, which involves
+compression. If viscosities are negligible, the solution is just
+\[
+\omega =  c \beta ,
+\]
+%
+the usual dispersion relation for sound of
+Sec. \ref{sec:sound_waves}. In general, though:
+\begin{equation}
+  \label{eq:waves_att_dispersion}
+  \beta^2 =
+  \frac{\omega^2}{c^2 - i(\nu+\zeta)\omega}=
+  \frac{\omega^2}{c^2}\frac{1}{1 -  i\omega/\omega_c},
+\end{equation}
+where we define the crossover angular frequency \index{crossover
+  angular frequency}
+\[
+\omega_c := \frac{c^2}{\nu + \zeta }.
+\]
 
-
-Transverse waves
-
-
-I know, sound waves are longitudinal. But, what happens if we plug
-these derivatives for the $y$ Cartesian component. Well:
-
-\[ -\omega^2 = - i \nu \omega \beta^2,\]
-
-or
-
-\[ \beta^2 = \frac{\omega}{i \nu} = - \frac{\omega i}{\nu} .\]
-
-Now, this is a very classic complex analysis problem. Recall $
--i=e^{3\pi/2+2\pi} $ You do need the $ 2\pi$ to get the two
-solutions. On of the solutions has the signs reversed, and corresponds
-to a wave propagating and attenuating in the $-x$ direction. The one
-we are looking for is:
-
-\[ \beta =\sqrt{ \frac{\omega}{ \nu}}e^{ 7 \pi/4}.\]
-
-Therefore
-
-\[ k=\alpha =\sqrt{ \frac{\omega}{ 2 \nu}}.\]
-
-This is an interesting wave, since the attenuation coefficient is
-equal to the wave number. It looks like a simple function: $
-e^{-x}\sin(x)$, which would be called simplistic by a physicist. If
-you plot it you'll see it decays very fast, with just one maximum of
-minimum of importance. (You can just type ``e\^-x*cos(x) from 0 to 10''
-in google, it will plot it!). So, yes, sound waves are basically
-longitudinal, since their transverse components get attenuated very
-fast. How fast? As we said before, the attenuation length is the
-inverse of $ \alpha$, so $ L=\sqrt{2\nu/\omega}$. This means that for
-everyday "sound", i.e. audible frequencies, that length is quite
-small. With the numerical data in the Table, that length will be only
-be about 0.7 mm for a very low frequency of 10 Hz (just below the
-hearing range), and will decrease as the inverse of the square root of
-the frequency.
+This is the frequency above which the viscosity begins to be relevant.
+Numerical values can be found in Table \ref{tbl:sound_att}. The
+frequency is really high for the human hearing range, which goes up to
+about $\SI{20}{\kilo\hertz}$ for humans. The record in the animal
+kingdom is held by porpoises (\ref{fig:porpoise}), but it is only
+about $\SI{160}{\kilo\hertz}$. Ultrasonic cleaners used in dentistry
+operate at $\SI{40}{\kilo\hertz}$. Medical ultrasound for imaging goes
+as high as $\SI{16}{\mega\hertz}$. Only acoustic microscopy
+\cite{kp:AM} reaches a few \si{\giga\hertz}, matching our estimate for
+air.
 
 \begin{table}
 \begin{tabular}{|c|c|c|c|c|}
   \hline
-    & $ c$ (m/s) &  $ \nu$ (m$^2$/s) & $\zeta/\rho_0$ (m$^2$/s) & $ f_c$ (GHz)\\
+    & $ c$ (m/s) &  $ \nu$ (m$^2$/s) & $\zeta$ (m$^2$/s) & $ f_c$ (GHz)\\
   \hline
   \hline
   water & $1480$& $ 1.0 \times 10^{-6}$ & $ 3.1 \times 10^{-6}$ & $79$ \\
@@ -146,127 +161,156 @@ the frequency.
   air & $340$   & $ 1.48\times 10^{-5}$ & $ 5 \times 10^{-6}$ ? & $0.7$ \\
   \hline
 \end{tabular}
-\caption{Numerical values for two important substances. Question marks
-  are speculative, since in Cramer air is said to have a negligible
-  bulk viscosity... but in a graph this quantity's value is seen to be
-  about half the shear viscosity value, and air is mostly nitrogen.}
+\caption{Numerical values for two important substances. Values with
+  question marks are speculative, since in Cramer\cite{Cramer} air is
+  said to have a negligible bulk viscosity\ldots but in a graph this
+  quantity's value is seen to be about half the shear viscosity value,
+  and air is mostly nitrogen.
+ \label{tbl:sound_att}}
 \end{table}
 
-Longitudinal waves
 
-Plugging the derivatives for the $x$ Cartesian component:
-
-\[ -\omega^2 = - c^2\beta^2 - i (4\nu/3+\zeta/\rho_0)  \omega \beta^2.\]
-
-We see that the viscosity now features the bulk viscosity, as seems
-fitting for a longitudinal disturbance, which involves
-compression. Also, a new important term appears. If viscosity were
-negligible, the solution is just
-
-\[  \omega =  c \beta , \]
-
-the usual dispersion relation for sound. In general, though:
-
-\[ \beta^2 =
-\frac{\omega^2}{c^2+i(4\nu/3+\zeta/\rho_0)\omega}=\frac{\omega^2}{c^2}\frac{1}{1+
-  i\omega/\omega_c},\]
-
-where we define the important crossover angular frequency
-
-\[ \omega_c := \frac{c^2}{4\nu/3+\zeta/\rho_0}.\]
-
-Numerical values can be found in the table (we provide the linear
-frequency). The value is really high for hearing range, which goes up
-to about 20 kHz for humans, 160kHz for porpoises, which hold the
-record. Medical ultrasound goes as high as 16 MHz only, and only
-acoustic microscopy reaches a few GHz, the range at which our value
-for air sits.
+\subsubsection{Low frequencies}
 
 
-Low frequencies
+At frequencies much below the crossover frequency, we may expand the
+term in the denominator in a Taylor series, then again for the square
+root. The end result is
+\[
+\beta = \frac{\omega}{c} \left(1 + i   \frac{\omega}{2 \omega_c}\right).
+\]
+%
+Therefore, the wave number is
+\[
+\beta = \frac{\omega}{c},
+\]
+as if there were no viscosity.
 
-
-At frequencies much below the
-crossover frequency, we may expand the term in the denominator in a
-Taylor series, then again for the square root. The end result is
-
-\[ \beta = \frac{\omega}{c} (1-i   \omega/(2 \omega_c)).\]
-
- 
-
-Therefore the wave number is
-
-\[ \beta = \frac{\omega}{c},\]
-
-as if there were no viscosity. The attenuation coefficient is
-
-\[ \alpha = \frac{\omega^2}{2 c\omega_c}=\frac{\omega^2}{2 c^3}(4\nu/3+\zeta/\rho_0). \]
-
+The attenuation coefficient is
+\[ \alpha = \frac{\omega^2}{2 c\omega_c}=
+\frac{\omega^2}{2 c^3}(\nu+\zeta). \]
+%
 It therefore grows as the square of the frequency.  This agrees with
-the expression in Stokes' law of sound at wikipedia (but for a
-factor of two in the general formula, which I have just corrected -
-let's see if it stays). This would mean that for that very high
-porpoise's pitch at 160Hz the attenuation length would be about 1.5
-kilometers (in water, of course), which may be important for
-long-range communication of these animals. For medical ultrasound at
-16MHz this length is 14cm, which can clearly have an impact for human
-tissues (I am not sure if this attenuation may be used to our
-advantage). For the human bodies I have used water values, which is a
-fair approximation.
+the expression in ``Stokes' law of sound'' \cite{kp:SloS}
+(but for a factor of two in the general formula, which I have just
+corrected - let's see if it stays).  \index{Stokes' law of sound}.
+
+This means that for that the highest sound in a porpoise's range, at
+$\SI{160}{\kilo\hertz}$ the attenuation length would be about
+$\SI{1.5}{\kilo\meter}$ (in water, of course). This may be important
+for the long-range communication of these animals. For medical
+ultrasound at $\SI{16}{\mega\hertz}$ this length is
+$\SI{14}{\centi\meter}$, with water values (a fair approximation for
+the human body.) This can have an impact for human tissues, in the
+sense that in a distance of some tens of centimeters the energy of the
+ultrasound waves is dissipated inside the body of the patient, and may
+cause unwanted heating.
+
+\subsubsection{High frequencies}
+
+At frequencies much higher than the crossover, we may neglect the
+``1'' in the denominator of \ref{eq:waves_att_dispersion}, to obtain
+\[
+\beta^2 = \frac{i \omega\omega_c}{c^2} .
+\]
+If we substitute the crossover frequency:
+\[
+\beta^2 = \frac{\omega}{i(\nu+\zeta)} =\frac{i \omega}{\nu+\zeta} 
+\]
+Recalling $i = e^{(pi/2)i} $, the solution is
+\[
+\beta =\sqrt{ \frac{\omega}{ \nu + \zeta }} e^{(\pi/4)i}.
+\]
+
+Therefore
+\[
+k=\alpha =\sqrt{\frac{\omega}{ 2 (\nu+ \zeta}}.
+\]
+
+This is an interesting result, since the attenuation coefficient is
+equal to the wave number. The attenuation length is
+\[
+\ell= \frac{1}{\alpha}=\sqrt{\frac{ 2 (\nu+ \zeta)}{\omega}}
+\]
+The function looks therefore like a simple function
+\[
+g(x)= f(x/\ell) \qquad  f(x) = e^{-x}\cos(x) .
+\]
+In Figure \ref{fig:expcos}, it is seen to decay very fast, with just
+one maximum of minimum of importance.
 
 
-High frequencies
 
+\subsubsection{At the crossover frequency}
 
-At frequencies much
-higher than the crossover, we may neglect the "1" in the denominator,
-to obtain
-
-\[ \beta^2 = \frac{\omega\omega_c}{i c^2} .\]
-
-Now, this looks familiar, especially if we substitute the crossover
-frequency:
-
-\[ \beta^2 = \frac{\omega}{i(4\nu/3+\zeta/\rho_0)} .\]
-
-Basically, the same expression as for transverse waves, with a
-different combination of viscosities. The conclusion is similar:
-
-\[ k=\alpha =\sqrt{ \frac{\omega}{ 2(4\nu/3+\zeta/\rho_0)}},\]
-
-and the resulting waves are heavily attenuated.
-
-
-
-The crossover
 
 A fast check on the above approximations is to see what happens when
 the frequency is exactly the crossover frequency. At this point, the
 growth of the attenuation coefficient as the square of frequency
 crosses over to a growth as the square root. This would mean a bend in
-a log-log plot, between two straight lines with different slopes.
+a log-log plot, between two straight lines with different slopes. This
+is shown in Figure \ref{fig:loglog}.
 
 The extrapolation of the low frequency expression yields
-
-\[ \alpha_c\approx \omega_c/(2 c) , \]
+\[
+\alpha_c\approx \frac{\omega_c}{2 c} ,
+\]
 
 whereas the high frequency expression yields
+\[
+\alpha_c\approx \frac{\omega_c}{\sqrt{2} c} ,
+\]
+which are similar.
 
-\[ \alpha_c\approx \omega_c/(\sqrt{2} c) , \]
-
-not so different at all.
-
-The exact expression can be shown to be, after some complex algebra,
-
-\[ \alpha_c\approx \omega_c \sin(\pi/8) / (2^{1/4} c) , \]
-
+The exact expression can be shown to be, after some involved algebra,
+\[
+\alpha_c =\frac{ \sin(\pi/8) \omega_c }{ (2^{1/4} c } ,
+\]
 a value just a bit below the other two. This means the approximations
 remain quite fair up to the limit of their respective ranges.
 
 By the way, for water this value corresponds to an attenuation length
-of about 58 nm, which is really short. For air, it is about 1.5
-micrometers, the size of a really small cell.
+of about \SI{58}{\nano\meter}, which is really short. For air, it is
+about \SI{1.5}{\micro\meter}, the size of a really small cell.
+
+
+\subsection{Transverse waves}
+
+We tend to think, sound waves are longitudinal. We here discuss how
+they may have a transverse component, but it is dampened at al
+frequencies.
+
+If we write Eq. \ref{eq:sound_att_Fourier} for the $y$ or $z$
+Cartesian component, we find
+\[
+-\omega^2 =  i \nu \omega \beta^2 ,
+\]
+or
+\[
+\beta^2 = \frac{i \omega}{\nu}.
+\]
+Only $\nu$ is involved, which is fitting: transverse waves involve
+only shear, not compression.
+
+The expression is very similar to the one for longitudinal waves at
+high frequencies, only this one is valid at \emph{all} frequencies.
+Its solution is
+\[
+k = \alpha = \sqrt{ \frac{\omega}{ 2 \nu}}.
+\]
+Figure \ref{fig:expcos} still applies to these waves, with the
+difference that the decay length is
+\[
+\ell= \frac{1}{\alpha}=\sqrt{\frac{ 2 \nu}{\omega}}
+\]
+
+For frequencies of ordinary ``sound'', i.e. audible frequencies, that
+length is quite small. With the numerical data in the Table, that
+length is only about \SI{0.7}{\milli\meter} for aire, at a very low
+frequency of \SI{10}{\hertz} (just below the lower hearing threshold),
+and will decrease further as the inverse of the square root of the
+frequency.
 
 
 
- 
+
