--- a/sound_waves_att.tex
+++ b/sound_waves_att.tex
@@ -150,6 +150,15 @@ as high as $\SI{16}{\mega\hertz}$. Only acoustic microscopy
 \cite{kp:AM} reaches a few \si{\giga\hertz}, matching our estimate for
 air.
 
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{figures/porpoises}
+  \end{center}
+  \caption{Harbor porpoises. From \cite{Brehms_Tierleben}.  \label{fig:porpoises}}
+\end{figure}
+
+
 \begin{table}
 \begin{tabular}{|c|c|c|c|c|}
   \hline
